[gd_scene load_steps=2 format=3 uid="uid://0fpl8ba57ep8"]

[ext_resource type="Script" uid="uid://dovonmbw3vymd" path="res://actor_builders/inventory_system/item_popup.gd" id="1_ccg64"]

[node name="ItemPopup" type="MarginContainer"]
top_level = true
z_index = 10
offset_right = 361.0
offset_bottom = 88.0
script = ExtResource("1_ccg64")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.333333, 0.333333, 0.333333, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HeaderContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="HeaderColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/HeaderContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
color = Color(0.239216, 0.568627, 0.862745, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HeaderContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Big Gun"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HeaderContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ItemTypeLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Ranged Weapon"

[node name="WeightLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Weight: ???"
horizontal_alignment = 2

[node name="MiddleContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MiddleText" type="RichTextLabel" parent="MarginContainer/VBoxContainer/MiddleContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "this is not a drill (it's a big gun)"
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="FooterContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="FooterColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/FooterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
color = Color(0.239216, 0.568627, 0.862745, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/FooterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ItemTagsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/FooterContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ItemTagsLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/FooterContainer/MarginContainer/ItemTagsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "sfjihfkjsdhfkjah"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1
